--- a/01-html-git-css/code-drills/00-required-code-drills/07-core-css-relative-pathing/challenge-prompt.html
+++ b/01-html-git-css/code-drills/00-required-code-drills/07-core-css-relative-pathing/challenge-prompt.html
@@ -15,25 +15,38 @@
         /* Set the width of each image */
 
         /* Add some padding around each image */
+img {
+    width: 200px;
+    height: 150px;
+    /* padding: 20px; */
+    border-radius: 2rem;
+    box-shadow: 1px 2px #888888;
 
+}
+
+ a:hover img {
+
+        transform: scale(1.5);
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
     /* ============================================ */
 </style>
 
 <body>
     <!-- Create an image element that displays the `cat-on-laptop.jpg` image -->
-
+    <img src="./images/cat/kitty/cat-on-laptop.jpg">
     <!-- Create an image element that displays the  `basket-kitty.jpg` image -->
-
+    <img src="./images/cat/kitty/kitten/basket-kitty.jpg">
     <!-- Create an image element that displays the `dog-glasses-suit.jpg` image -->
-
+    <img src="./images/dog/dog-glasses-suit.jpg">
     <!-- Create an image element that displays the `dog/puppy/basket-puppies.jpg` image -->
-
+    <img src="./images/dog/puppy/basket-puppies.jpg">
     <!-- Create an image element that displays the `fatbirdy.jpg` image -->
-
+    <img src="./images/fatbirdy.jpg">
     <!-- Create an image element that displays the `bird/cool-bird.jpg` image -->
-
+    <img src="./images/bird/cool-bird.jpg">
     <!-- Create an image element that displays the `squirrel-sandbox.jpg` image -->
-
+    <img src="./images/squirrel-sandbox.jpg">
 </body>
 
 </html>
