--- a/01-html-git-css/code-drills/00-required-code-drills/08-core-css-float-and-file-path/challenge-prompt.html
+++ b/01-html-git-css/code-drills/00-required-code-drills/08-core-css-float-and-file-path/challenge-prompt.html
@@ -9,52 +9,72 @@
     img {
         width: 150px;
         /* add a border */
-
+        border-radius: 1rem;
 
     }
 
     /* Add styling to p tags and div elements */
+p {
+ color: grey;
+ font-family: Arial, Helvetica, sans-serif;
+font-weight:50;
+}
+div {
+    padding: 30px;
+}
 
+
+.row {
+    display: flex;
+  align-items: center;
+}
+
+col {
+    align-items: center;
+}
     
 </style>
 
 <body>
 
     <!-- Add the file paths for these images -->
-    <div>
+    <div class="row">
+    <div class="col">
         <img src="" alt="cat-on-laptop">
         <p>cat on a laptop</p>
     </div>
     
-    <div>
+    <div class="col">
         <img src="" alt="basket-kitty">
         <p>basket of kittens</p>
     </div>
 
-    <div>
+    <div class="col">
         <img src="" alt="dog-glasses-suit"> 
         <p>doggy in a suit with glasses</p>
     </div>
-
-    <div>
+</div>
+<div class="row">
+    <div class="col">
         <img src="" alt="basket-puppies"> 
         <p>basket of puppies</p>
     </div>
 
-    <div>
+    <div class="col">
         <img src="" alt="fatbirdy"> 
         <p>a fat birdy</p>
     </div>
 
-    <div>
+    <div class="col">
         <img src="" alt="cool-bird"> 
         <p>cool looking birdy</p>
         </div>
 
-    <div>
+    <div class="col">
         <img src="" alt="squirrel-sandbox"> 
         <p>squirrel in a sandbox</p>
     </div>
+</div>
 </body>
 
 </html>
