--- a/01-html-git-css/code-drills/00-required-code-drills/10-core-css-float-wrappers/challenge-prompt.html
+++ b/01-html-git-css/code-drills/00-required-code-drills/10-core-css-float-wrappers/challenge-prompt.html
@@ -19,12 +19,19 @@
     img {
         padding: 5px;
         /* Float the image so that it's in the top left of the box and the text flows around it */
-
+        float: left;
 
     }
 
     /* Add selectors to float the two divs to different sides */
-
+    #wrapper-right {
+        float: right;
+    
+    }
+    #wrapper-left {
+        float: left;
+    
+    }
 
 </style>
 
