High Scores HTML completed

--- a/04-Web-APIs/homework/highscores.html
+++ b/04-Web-APIs/homework/highscores.html
@@ -8,9 +8,15 @@
     <title>Highscore</title>
 </head>
 <body>
-    
+    <div class="wrapper" >
+        <h1>Highscore</h1>
+        <ol id="highscores"></ol>
 
-    <div class="highscore"></div>
+        <a href="index.html"><button>Go Back</button></a>
+        <button id="clear">Clear Highscores</button>
+    </div>
+
+
     <script src="./assets/js/scores.js"></script>
 </body>
 </html>
