--- a/04-Web-APIs/homework/index.html
+++ b/04-Web-APIs/homework/index.html
@@ -32,13 +32,9 @@
             <button id="submit">Submit</button>
         </p>
     </div>
-
+    <!-- Tells the user wether they got the question right or wrong --->
     <div id="feedback" class="feedback hide"></div>
 </div>
-
-
-
-
 
 
 
